# archivebot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
archivebot/: audio.py  bot.py  context.py  converter.py  iauploader.py  log.py  main.py  register.py  telegram.py
