[tool.poetry]
name = "archivebot"
version = "0.1.0"
description = ""
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
internetarchive = "^4.0.1"
requests = "^2.32.0"
python-dotenv = "^1.0.1"
pydantic = "^2.7.1"
plumbum = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
